--- a/introduction/style.css
+++ b/introduction/style.css
@@ -159,7 +159,7 @@ nav, a {
 .banner-text, h1 {
     color: white;
     margin-bottom: 2rem;
-    font-size: 5rem;
+    font-size: 5vw;
     letter-spacing: .1rem;
     text-shadow: black 0px 0 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -221,30 +221,51 @@ nav, a {
     display: flex;
     justify-content: center;
     align-items: end;
-    background-image: linear-gradient(rgba(164, 190, 164, 0.3),rgba(0, 0, 0, 0.8)) , url(images/banner-1.jpg);
+    background-image: url(images/banner-1.jpg);
+}
+
+.gradient {
+    position: absolute;
+    max-height: 100%;
+    height: 100%;
+    width: 96rem;
+    background-image: linear-gradient(rgba(164, 190, 164, 0.3),rgba(0, 0, 0, 0.7));
 }
 
 .banner-text input {
     display: none;
 }
 
-.image-selector {
-    border: 1px solid white;
-    border-radius: 10px;
-    padding: 5px;
-}
+.switch-sel {
+    position: absolute;
 
+}
+/*
 .image-selector {
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     padding: 6px;
     border: 1px solid rgba(204, 204, 204, 0.4);
     background-image: linear-gradient(rgba(204, 204, 204, 0.4),rgba(130, 130, 130, 0.4));
     border-radius: 50%;
     margin: 42px;
     margin-bottom: 50px;
+    
 }
+*/
 
+.image-selector {
+    width: 20px;
+    height: 20px;
+    padding: 6px;
+    border: 1px solid rgba(204, 204, 204, 0.4);
+    background-image: linear-gradient(rgba(204, 204, 204, 0.4),rgba(130, 130, 130, 0.4));
+    display: inline;
+    z-index: 5;
+    margin: 42px;
+    margin-bottom: 50px;
+
+}
 @media screen and (max-width: 768px) {
     .intro-container {
         grid-template-columns: 1fr;
