--- a/home/style.css
+++ b/home/style.css
@@ -4,95 +4,156 @@
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
-nav {
-    height: 2.3rem;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 34px;
-}
-
-nav > .nav-tree {
+.nav-section {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
+    flex-direction: row;
+
+
+    padding-right: 40px;
+    padding-left: 12px;
+
+    height: 6rem;
 }
 
-.nav-items {
+.nav-tree {
     display: flex;
-    justify-content: end;
-}
-
-.nav-links {
-    padding: 32px;
-}
-
-
-
-.logo {
-    color: black;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-top: 10px;
-    height: 7rem;
-}
-
-
-#login-profile {
-    font-size: 25px;
-    border-radius: 20%;
-    margin-top: 0.8rem;
-    margin-right: 2.3rem;
-    margin-left: 0.8rem;
-    cursor: pointer;
-}
-
-#search-button {
-    padding: 3px;
-    padding-bottom: 2.6px;
-    padding-top: -100px; 
-    padding-bottom: 5px; 
-    margin-right: 30px;
-    background: none;
-    border: none;
-    font-size: 27px;
-    transition: 20ms;
-}
-
-#search-query {
-    padding: 5px;
-    margin-right: -6px;
-    border: none;
-    transition: 60ms;
-    visibility: hidden;
-    user-select: none;
-}
-
-.nav-search {
-    display: flex;
-    height: 50px;
-    width: 217px;
+    justify-content: center;
     align-items: center;
 }
 
-.nav-search:hover > #search-button {
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
-    border: 2px solid gray;
-    border-left: none;
-    font-size: 13px;
+.logo {
+    width: 220px;
 }
 
-.nav-search:hover > #search-query {
-    border: 2px solid gray;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+#login-profile {
+    font-size: 30px;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.fa-bars{
+    width: 60px;
+    height: 47px;
+    font-size: 25px;
+    margin: 0px;
+    margin-left: 12px;
+    margin-right: 5px;
+    padding: 9px;
+    padding-left: 12px;
+    border: 2px solid darkgray;
     border-right: none;
-    visibility:visible;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    transition: 120ms;
 }
 
+.fa-bars:hover {
+    background-color: black;
+    color: white;
+    border-color: gray;
+    border-right: 2px solid darkgray;
+}
 
+.fa-left-long-to-line {
+    font-size: 35px;
+} 
 
-nav, a {
+.filter {
+    height: 47px;
+    font-size: 17px;
+    position: absolute;
+    width: 300px;
+    border: 2px solid darkgray;
+    border-left: none;
+    padding: 11px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    margin-left: -5px;
+    letter-spacing: 2px;
+}
+
+#filter-show {
+    background: none;
+    border: none;
+}
+
+.divider {
+    border: 1px solid lightgray;
+    margin: 25px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.option-tree {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.burger-option {
+    width: 97%;
+    height: 50px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    cursor: pointer;
+    transition: 40ms;
+}
+
+.burger-option:hover {
+    background-color: rgba(150, 150, 150, 0.2);
+    border-radius: 8px;
+    border: 1px solid lightgray;
+    
+}
+
+.option-menu {
+    padding: 3px;
+}
+
+.option-selector {
+    position: absolute;
+    width: 47vh;
+    margin: 12px;
+    margin-top: 15px;
+    margin-bottom: 18px;
+    background-color: white;
+    border: 2px solid lightgray;
+    border-bottom: 2px solid gray;
+    box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.3);
+    padding-top: 13px;
+    padding-bottom: 13px;
+    border-radius: 12px;
+    visibility: hidden;
+}
+
+.switch {
+    padding: 12px;
+}
+
+.burger-opt {
+    font-size: 16px;
     text-decoration: none;
     color: black;
+}
+
+.burger-option > i {
+    font-size: 26px;
+    margin: 20px;
+    margin-left: 25px;
+    width: 30px;
+}
+
+.main-content {
+    height: 100%;
+    width: 100%;
+    background:  linear-gradient(to bottom, darkgray, gray);
+}
+
+.fade {
+    width: 100%;
+    height: 55px;
+    background-image: linear-gradient(to bottom, lightgray, darkgray);
 }
