--- a/register/create/style.css
+++ b/register/create/style.css
@@ -38,7 +38,7 @@ nav {
 
 .box {
     box-shadow: 0px 0px 55px black;
-    border-radius: 2%;
+    border-radius: 10px;
     padding: 2rem;
     margin: 3rem;
     margin-top: 3.5rem;
@@ -185,7 +185,7 @@ nav {
     height: 50px;
     width: 100%;
     background-color: white;
-    border: 1px solid rgba(120, 120, 120, 0.3);
+    border: 2px solid rgba(120, 120, 120, 0.3);
     cursor: pointer;
     transition: 120ms;
 }
