--- a/register/login/style.css
+++ b/register/login/style.css
@@ -37,7 +37,7 @@ nav {
 
 .box {
     box-shadow: 0px 0px 55px black;
-    border-radius: 2%;
+    border-radius: 10px;
     padding: 2rem;
     margin: 3rem;
     margin-top: 3.5rem;
