--- a/home/style.css
+++ b/home/style.css
@@ -10,7 +10,7 @@
     flex-direction: row;
 
 
-    padding-right: 40px;
+    padding-right: 12px;
     padding-left: 12px;
 
     height: 6rem;
@@ -24,12 +24,31 @@
 
 .logo {
     width: 220px;
+    margin-right: -190px;
 }
 
-#login-profile {
-    font-size: 30px;
-    margin: 20px;
+.nav-items > i {
+    font-size: 25px;
+    margin: 10px;
     cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 3px solid black;
+    border-radius: 30px;
+    padding: 11px;
+    transition: 150ms;
+}
+
+
+.nav-items > i:hover {
+    font-size: 25px;
+    margin: 10px;
+    background-color: lightgray;
+    color: white;
+    border: 3px solid darkgray;
+    border-radius: 30px;
+    padding: 11px;
+    box-shadow: 0px 0px 15px lightgray;
 }
 
 .fa-bars{
@@ -45,7 +64,7 @@
     border-right: none;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
-    transition: 120ms;
+    transition: 80ms;
 }
 
 .fa-bars:hover {
@@ -122,7 +141,7 @@
     background-color: white;
     border: 2px solid lightgray;
     border-bottom: 2px solid gray;
-    box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: -5px 5px 20px rgba(0, 0, 0, 0.5);
     padding-top: 13px;
     padding-bottom: 13px;
     border-radius: 12px;
@@ -142,8 +161,8 @@
 .burger-option > i {
     font-size: 26px;
     margin: 20px;
-    margin-left: 25px;
-    width: 30px;
+    margin-left: 15px;
+    width: 25px;
 }
 
 .main-content {
