--- a/home/style.css
+++ b/home/style.css
@@ -13,6 +13,9 @@
     padding-right: 12px;
     padding-left: 12px;
 
+    background-color: white;
+    border-bottom: 2px solid darkgray;
+    
     height: 6rem;
     position: sticky;
     top: 1px;
@@ -183,6 +186,7 @@ input:placeholder-shown {
 }
 
 .fade {
+
     width: 100%;
     height: 55px;
     background-image: linear-gradient(to bottom, lightgray, darkgray);
@@ -191,7 +195,7 @@ input:placeholder-shown {
 
 
 .main-content {
-    height: 100%;
+    height: 300%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -200,7 +204,7 @@ input:placeholder-shown {
 }
 .center-content {
     width: 120vh;
-    height: 95%;
+    height: 99%;
     background-color: white;
     border-radius: 42px;
     box-shadow: 0px 0px 100px gray;
