--- a/introduction/style.css
+++ b/introduction/style.css
@@ -160,7 +160,7 @@ nav, a {
     margin-bottom: 2rem;
     font-size: 5vw;
     letter-spacing: .1rem;
-    text-shadow: black 0px 0 12px;
+    text-shadow: black 4px 4px 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -187,7 +187,6 @@ nav, a {
 }
 
 .view:hover {
-    font-size: 22px;
     text-decoration: underline;
 }
 
@@ -215,8 +214,8 @@ nav, a {
 
 .banner-image {
     max-height: 100%;
-    height: 100%;
-    width: 96rem;
+    height: 150%;
+    width: 106rem;
     display: flex;
     justify-content: center;
     align-items: end;
@@ -227,7 +226,7 @@ nav, a {
     position: absolute;
     max-height: 100%;
     height: 100%;
-    width: 96rem;
+    width: 106rem;
     background-image: linear-gradient(rgba(164, 190, 164, 0.3),rgba(0, 0, 0, 0.7));
 }
 
